Feat:增加一型一密功能
